<resources>
    <string name="app_name">Doa and Dzikr App</string>
    <string name="title_main">Lets Get Close To Allah</string>
    <string name="txt_judul_fitur">Doa &amp; Dzikir Sehari-Hari</string>
    <string name="txt_sunnah_qauliyah">Sunnah-Sunnah Qauliyah \nDzikir &amp; Doa Shalat</string>
    <string name="txt_dzikir_setiap_saat">Dzikir Setiap Saat</string>
    <string name="txt_dzikir_doa_harian">Dzikir &amp; Doa Harian</string>
    <string name="txt_dzikir_pagi_petang"><![CDATA[Dzikir Pagi & Petang]]></string>
    <string name="txt_artikel_islami">Sedikit Cerita Islami</string>
    <string name="txt_dzikir_pagi">Dzikir Pagi</string>
    <string name="txt_dzikir_petang">Dzikir Petang</string>
    <string name="content_txt_icon_dzikir_pagi_petang">Icon Dzikir Pagi Petang</string>
    <string name="content_txt_icon_dzikir_doa_harian">Icon Dzikir Doa Harian</string>
    <string name="content_txt_icon_dzikir_setiap_saat">Icon Dzikir Setiap Saat</string>
    <string name="content_txt_icon_qauliyah_shalat">Icon Qauliyah Shalat</string>
    <string name="content_txt_icon_btn_dzikir_pagi">Icon btn dzikir Pagi</string>
    <string name="content_txt_icon_btn_dzikir_petang">Icon btn Dzikir Petang</string>
    <string name="content_txt_icon_image_for_background_dzikir">Icon image for Background Dzikir</string>
    <string name="content_txt_image_artikel">Image Poster Detail Artikel</string>
    <string-array name="arr_img_artikel">
        <item>@drawable/artikel_1</item>
        <item>@drawable/artikel_2</item>
        <item>@drawable/artikel_3</item>
        <item>@drawable/artikel_4</item>
        <item>@drawable/artikel_5</item>
        <item>@drawable/artikel_6</item>
        <item>@drawable/artikel_7</item>
        <item>@drawable/artikel_8</item>
    </string-array>
    <string-array name="arr_title_artikel">
        <item>Sedekah Tidak Akan Membuatmu Miskin</item>
        <item>Kesabaran dalam Islam: Kunci Keberkahan dan Ketenangan Hati</item>
        <item>Keajaiban Doa di Sepertiga Malam</item>
        <item>Keutamaan Berdzikir: Kunci Kedekatan dengan Allah SWT</item>
        <item>Berbakti kepada Kedua Orang Tua: Tugas dan Nilai Mulia dalam Islam</item>
        <item>Menuntut Ilmu dalam Islam: Kunci Pencapaian Kebijaksanaan dan Kedekatan dengan Allah SWT</item>
        <item>Hari Kiamat: Hari Pertanggungjawaban</item>
        <item>Haji: Perjalanan Spiritual ke Tanah Suci</item>
    </string-array>
</resources>